Changed __init__.py to provide a proper interface and updated CompaniesHouse/TODO.txt to reflect resolved TODOs

--- a/CompaniesHouse/TODO.txt
+++ b/CompaniesHouse/TODO.txt
@@ -1,7 +1,4 @@
 
-- Finish CompanySearch
-  currently only the googlesearch is done -- the CH side is unimplemented!
-
 - Integrate PDF scanning
   Finish it off and add it to CompanyInfo
 
@@ -12,5 +9,5 @@
   Many queries are known very early so could be made early and used later, reducing latency. Be careful about overloading via "multithreaded queries".
 
 - Rate Limit
-  Google does A LOT OF rate limiting! It will block very easily!
-  Both Google and CH can and will block -- if this happens in a demo it's really bad
+  CH can block -- if this happens in a demo it's really bad
+  Currently I rely on "it seems unlikely if used properly" -- but safer not to test
