Re-did imports and updated TODO

--- a/CompaniesHouse/TODO.txt
+++ b/CompaniesHouse/TODO.txt
@@ -1,7 +1,3 @@
-
-- Integrate PDF scanning
-  Finish it off and add it to CompanyInfo
-
 - Use "requests-cache"
   This library caches requests, increasing performance and reducing probability of blocks
 
@@ -10,4 +6,4 @@
 
 - Rate Limit
   CH can block -- if this happens in a demo it's really bad
-  Currently I rely on "it seems unlikely if used properly" -- but safer not to test
+  Currently I rely on "it seems unlikely we'd hit the rate cap if used properly" -- but safer not to test
